--- a/baseball/Royals_2015.html
+++ b/baseball/Royals_2015.html
@@ -20,96 +20,93 @@
     <main>
 
         <div class="big">
-            <h2>Royals 2014 World Series Roster</h2>
+            <h2>Royals 2015 World Series Roster</h2>
         </div>
         <div id="flexbox">
 
             <div class="box" id="r1">
 
-                <img src="perez.png" alt="Perez" class="playerpic" id="pic1">
+                <img src="escobar.png" alt="Escobar" class="playerpic" id="pic1">
                 <div id="text1" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name1"></p>
-                    <p id="r1num1"></p>
-                    <p id="r1pos1"></p>
-                    <p id="r1rbi1"></p>
-                    <p id="r1home1"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name1"></p>
+                    <p id="r3num1"></p>
+                    <p id="r3pos1"></p>
+                    <p id="r3rbi1"></p>
+                    <p id="r3home1"></p>
                 </div>
             </div>
 
-            <div class="box" id="r2"> <img src="gordon.png" alt="Gordon" class="playerpic" id="pic2">
+            <div class="box" id="r2"> <img src="zobrist.png" alt="Zobrist" class="playerpic" id="pic2">
                 <div id="text2" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name2"></p>
-                    <p id="r1num2"></p>
-                    <p id="r1pos2"></p>
-                    <p id="r1rbi2"></p>
-                    <p id="r1home2"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name2"></p>
+                    <p id="r3num2"></p>
+                    <p id="r3pos2"></p>
+                    <p id="r3rbi2"></p>
+                    <p id="r3home2"></p>
                 </div>
             </div>
-            <div class="box" id="r3"> <img src="escobar.png" alt="Escobar" class="playerpic" id="pic3">
+            <div class="box" id="r3"> <img src="cain.png" alt="Cain" class="playerpic" id="pic3">
                 <div id="text3" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name3"></p>
-                    <p id="r1num3"></p>
-                    <p id="r1pos3"></p>
-                    <p id="r1rbi3"></p>
-                    <p id="r1home3"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name3"></p>
+                    <p id="r3num3"></p>
+                    <p id="r3pos3"></p>
+                    <p id="r3rbi3"></p>
+                    <p id="r3home3"></p>
                 </div>
             </div>
             <div class="box" id="r4"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="pic4">
                 <div id="text4" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name4"></p>
-                    <p id="r1num4"></p>
-                    <p id="r1pos4"></p>
-                    <p id="r1rbi4"></p>
-                    <p id="r1home4"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name4"></p>
+                    <p id="r3num4"></p>
+                    <p id="r3pos4"></p>
+                    <p id="r3rbi4"></p>
+                    <p id="r3home4"></p>
                 </div>
             </div>
-            <div class="box" id="r5"> <img src="cain.png" alt="Cain" class="playerpic" id="pic5">
+            <div class="box" id="r5"> <img src="morales.png" alt="Morales" class="playerpic" id="pic5">
                 <div id="text5" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name5"></p>
-                    <p id="r1num5"></p>
-                    <p id="r1pos5"></p>
-                    <p id="r1rbi5"></p>
-                    <p id="r1home5"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name5"></p>
+                    <p id="r3num5"></p>
+                    <p id="r3pos5"></p>
+                    <p id="r3rbi5"></p>
+                    <p id="r3home5"></p>
                 </div>
             </div>
-            <div class="box" id="r6"> <img src="butler.png" alt="Butler" class="playerpic" id="pic6">
+            <div class="box" id="r6"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="pic6">
                 <div id="text6" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name6"></p>
-                    <p id="r1num6"></p>
-                    <p id="r1pos6"></p>
-                    <p id="r1rbi6"></p>
-                    <p id="r1home6"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name6"></p>
+                    <p id="r3num6"></p>
+                    <p id="r3pos6"></p>
+                    <p id="r3rbi6"></p>
+                    <p id="r3home6"></p>
                 </div>
             </div>
-            <div class="box" id="r7"> <img src="infante.png" alt="Infante" class="playerpic" id="pic7">
+            <div class="box" id="r7"> <img src="perez.png" alt="Perez" class="playerpic" id="pic7">
                 <div id="text7" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name7"></p>
-                    <p id="r1num7"></p>
-                    <p id="r1pos7"></p>
-                    <p id="r1rbi7"></p>
-                    <p id="r1home7"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name7"></p>
+                    <p id="r3num7"></p>
+                    <p id="r3pos7"></p>
+                    <p id="r3rbi7"></p>
+                    <p id="r3home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="pic8">
+            <div class="box"> <img src="gordon.png" alt="Gordon" class="playerpic" id="pic8">
                 <div id="text8" class="hide">
-                    <p>2014 Season Stats</p>
-                    <p id="r1name8"></p>
-                    <p id="r1num8"></p>
-                    <p id="r1pos8"></p>
-                    <p id="r1rbi8"></p>
-                    <p id="r1home8"></p>
+                    <p>2015 Season Stats</p>
+                    <p id="r3name8"></p>
+                    <p id="r3num8"></p>
+                    <p id="r3pos8"></p>
+                    <p id="r3rbi8"></p>
+                    <p id="r3home8"></p>
                 </div>
             </div>
-
-
-
 
         </div>
 
@@ -121,7 +118,7 @@
 
             <div class="box"> <img src="gordon.png" alt="Gordon" class="playerpic" id="ppic1">
                 <div id="ttext1" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name1"></p>
                     <p id="r2num1"></p>
                     <p id="r2pos1"></p>
@@ -131,7 +128,7 @@
             </div>
             <div class="box"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="ppic2">
                 <div id="ttext2" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name2"></p>
                     <p id="r2num2"></p>
                     <p id="r2pos2"></p>
@@ -141,7 +138,7 @@
             </div>
             <div class="box"> <img src="cain.png" alt="Cain" class="playerpic" id="ppic3">
                 <div id="ttext3" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name3"></p>
                     <p id="r2num3"></p>
                     <p id="r2pos3"></p>
@@ -151,7 +148,7 @@
             </div>
             <div class="box"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="ppic4">
                 <div id="ttext4" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name4"></p>
                     <p id="r2num4"></p>
                     <p id="r2pos4"></p>
@@ -161,7 +158,7 @@
             </div>
             <div class="box"> <img src="perez.png" alt="Perez" class="playerpic" id="ppic5">
                 <div id="ttext5" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name5"></p>
                     <p id="r2num5"></p>
                     <p id="r2pos5"></p>
@@ -171,7 +168,7 @@
             </div>
             <div class="box"> <img src="mondesi.png" alt="Mondesi" class="playerpic" id="ppic6">
                 <div id="ttext6" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name6"></p>
                     <p id="r2num6"></p>
                     <p id="r2pos6"></p>
@@ -181,7 +178,7 @@
             </div>
             <div class="box"> <img src="orlando.png" alt="Orlando" class="playerpic" id="ppic7">
                 <div id="ttext7" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name7"></p>
                     <p id="r2num7"></p>
                     <p id="r2pos7"></p>
@@ -191,7 +188,7 @@
             </div>
             <div class="box"> <img src="escobar.png" alt="Escobar" class="playerpic" id="ppic8">
                 <div id="ttext8" class="hide">
-                    <p>2014 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name8"></p>
                     <p id="r2num8"></p>
                     <p id="r2pos8"></p>
@@ -201,7 +198,6 @@
             </div>
 
         </div>
-
 
     </main>
 
