--- a/baseball/header.html
+++ b/baseball/header.html
@@ -7,7 +7,7 @@
             <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
             <li><a href="#" title="Giants" id="threenav">Giants</a></li>
             <li><a href="Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
-            <li><a href="#" title="Mets" id="fivenav">Mets</a></li>
+            <li><a href="Mets.html" title="Mets" id="fivenav">Mets</a></li>
         </ul>
     </nav>
 </header>
