--- a/index.html
+++ b/index.html
@@ -3,51 +3,56 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Title</title>
+    <title>Search Bar</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
+    <link rel="stylesheet" type="text/css" href="baseball/base.css">
 </head>
 
 
 <body>
 
-    <header>
-        <h1> Maggie's Website! </h1>
-        <nav>
-            <li> home </li>
-            <li> page two </li>
-        </nav>
+    <header id="insert">
+
     </header>
 
-    <h2> This is my first section </h2>
-
     <main>
-        <p>
-            <a href="visitor_analysis_persona.html"> Analysis </a>
-            <br>
-            <a href="weather_planning.html"> Weather Planning Document </a>
-            <br>
-            <a href="mobilesite.html"> Mobile Weather</a>
-            <br>
-            <a href="Presentation.html"> Class Presentation on HTML Title and Alt</a>
-            <br>
-            <a href="responsive_media/index.html"> Responsive Media</a>
-            <br>
-            <a href="Lesson_4/main.html"> Lesson 4</a>
-            <br>
-            <a href="jsonweather-html/index.html">API Activity</a>
-            <br>
-            <a href="apiweather/index.html">Current Weather</a>
-            <br>
-            <a href="search/weather.html">Search Weather Page</a>
-            <a href="/baseball/Royals_2014.html"> Royals</a>
-        </p>
+        <div class="big">
+            <h2>Baseball Term Glossary</h2>
+        </div>
+
+        <div id="flexbox3">
+
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+            <div class="box">
+            </div>
+
+
+        </div>
+
+
+
     </main>
 
-    <footer>
-        <p>Last Updated 1.21.17</p>
+    <footer id="inserth">
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script src="baseball/baseball.js"></script>
 
 </body>
 
