--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
-    <link rel="stylesheet" type="text/css" href="baseball/base.css">
+    <link rel="stylesheet" type="text/css" href="base.css">
 </head>
 
 
@@ -49,7 +49,7 @@
     </main>
 
     <footer id="inserth">
-        
+
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
