--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <script src="baseball/baseball.js"></script>
+    <script src="/baseball/baseball.js"></script>
 
 </body>
 
