--- a/baseball/footer.html
+++ b/baseball/footer.html
@@ -1,5 +1,4 @@
-<footer>
-    <a href="homework/homeworkindex.html"> Homework </a>
+<footer> <a href="homework/homeworkindex.html"> Homework </a>
 
 
 </footer>
