--- a/header.html
+++ b/header.html
@@ -3,9 +3,9 @@
 
     <nav class="page-nav">
         <ul>
-            <li><a href="#" title="Home" id="onenav">Home</a></li>
+            <li><a href="index.html" title="Home" id="onenav">Home</a></li>
             <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
-            <li><a href="index.html" title="Giants" id="threenav">Giants</a></li>
+            <li><a href="Giants.html" title="Giants" id="threenav">Giants</a></li>
             <li><a href="Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
             <li><a href="Mets.html" title="Mets" id="fivenav">Mets</a></li>
         </ul>
