finished json and pictures

--- a/Giants.html
+++ b/Giants.html
@@ -77,7 +77,7 @@
                     <p id="g1home5"></p>
                 </div>
             </div>
-            <div class="box" id="r6"> <img src="belt.png" alt="Belt" class="playerpic" id="pic6">
+            <div class="box" id="r6"> <img src="belt.jpg" alt="Belt" class="playerpic" id="pic6">
                 <div id="text6" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name6"></p>
@@ -119,7 +119,7 @@
 
         <div id="flexbox2">
 
-            <div class="box"> <img src="gordon.png" alt="Gordon" class="playerpic" id="ppic1">
+            <div class="box"> <img src="span.png" alt="Gordon" class="playerpic" id="ppic1">
                 <div id="ttext1" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name1"></p>
@@ -129,7 +129,7 @@
                     <p id="g2home1"></p>
                 </div>
             </div>
-            <div class="box"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="ppic2">
+            <div class="box"> <img src="belt.jpg" alt="Moustakas" class="playerpic" id="ppic2">
                 <div id="ttext2" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name2"></p>
@@ -139,7 +139,7 @@
                     <p id="g2home2"></p>
                 </div>
             </div>
-            <div class="box"> <img src="cain.png" alt="Cain" class="playerpic" id="ppic3">
+            <div class="box"> <img src="pence.png" alt="Cain" class="playerpic" id="ppic3">
                 <div id="ttext3" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name3"></p>
@@ -149,7 +149,7 @@
                     <p id="g2home3"></p>
                 </div>
             </div>
-            <div class="box"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="ppic4">
+            <div class="box"> <img src="posey.png" alt="Hosmer" class="playerpic" id="ppic4">
                 <div id="ttext4" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name4"></p>
@@ -159,7 +159,7 @@
                     <p id="g2home4"></p>
                 </div>
             </div>
-            <div class="box"> <img src="perez.png" alt="Perez" class="playerpic" id="ppic5">
+            <div class="box"> <img src="crawford.png" alt="Perez" class="playerpic" id="ppic5">
                 <div id="ttext5" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name5"></p>
@@ -169,7 +169,7 @@
                     <p id="g2home5"></p>
                 </div>
             </div>
-            <div class="box"> <img src="mondesi.png" alt="Mondesi" class="playerpic" id="ppic6">
+            <div class="box"> <img src="nunez.png" alt="Mondesi" class="playerpic" id="ppic6">
                 <div id="ttext6" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name6"></p>
@@ -179,7 +179,7 @@
                     <p id="g2home6"></p>
                 </div>
             </div>
-            <div class="box"> <img src="orlando.png" alt="Orlando" class="playerpic" id="ppic7">
+            <div class="box"> <img src="panik.png" alt="Orlando" class="playerpic" id="ppic7">
                 <div id="ttext7" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name7"></p>
@@ -189,7 +189,7 @@
                     <p id="g2home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="escobar.png" alt="Escobar" class="playerpic" id="ppic8">
+            <div class="box"> <img src="bumgarner.png" alt="Escobar" class="playerpic" id="ppic8">
                 <div id="ttext8" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name8"></p>
