--- a/Giants.html
+++ b/Giants.html
@@ -13,8 +13,18 @@
 
 <body id="giants">
 
-    <header id="insert">
+    <header class="page-header">
+        <h1>Baseball Stats </h1>
 
+        <nav class="page-nav">
+            <ul>
+                <li><a href="index.html" title="Home" id="onenav">Home</a></li>
+                <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="Giants.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="Mets.html" title="Mets" id="fivenav">Mets</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -26,7 +36,7 @@
 
             <div class="box" id="r1">
 
-                <img src="blanco.png" alt="Blanco" class="playerpic" id="pic1">
+                <img src="blanco.jpg" alt="Blanco" class="playerpic" id="pic1">
                 <div id="text1" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name1"></p>
@@ -37,7 +47,7 @@
                 </div>
             </div>
 
-            <div class="box" id="r2"> <img src="panik.png" alt="Panik" class="playerpic" id="pic2">
+            <div class="box" id="r2"> <img src="panik.jpg" alt="Panik" class="playerpic" id="pic2">
                 <div id="text2" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name2"></p>
@@ -47,7 +57,7 @@
                     <p id="g1home2"></p>
                 </div>
             </div>
-            <div class="box" id="r3"> <img src="posey.png" alt="Posey" class="playerpic" id="pic3">
+            <div class="box" id="r3"> <img src="posey.jpg" alt="Posey" class="playerpic" id="pic3">
                 <div id="text3" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name3"></p>
@@ -57,7 +67,7 @@
                     <p id="g1home3"></p>
                 </div>
             </div>
-            <div class="box" id="r4"> <img src="sandoval.png" alt="Sandoval" class="playerpic" id="pic4">
+            <div class="box" id="r4"> <img src="sandoval.jpg" alt="Sandoval" class="playerpic" id="pic4">
                 <div id="text4" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name4"></p>
@@ -67,7 +77,7 @@
                     <p id="g1home4"></p>
                 </div>
             </div>
-            <div class="box" id="r5"> <img src="pence.png" alt="Pence" class="playerpic" id="pic5">
+            <div class="box" id="r5"> <img src="pence.jpg" alt="Pence" class="playerpic" id="pic5">
                 <div id="text5" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name5"></p>
@@ -87,7 +97,7 @@
                     <p id="g1home6"></p>
                 </div>
             </div>
-            <div class="box" id="r7"> <img src="travis.png" alt="Travis" class="playerpic" id="pic7">
+            <div class="box" id="r7"> <img src="travis.jpg" alt="Travis" class="playerpic" id="pic7">
                 <div id="text7" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name7"></p>
@@ -97,7 +107,7 @@
                     <p id="g1home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="crawford.png" alt="Crawford" class="playerpic" id="pic8">
+            <div class="box"> <img src="crawford.jpg" alt="Crawford" class="playerpic" id="pic8">
                 <div id="text8" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="g1name8"></p>
@@ -139,7 +149,7 @@
                     <p id="g2home2"></p>
                 </div>
             </div>
-            <div class="box"> <img src="pence.png" alt="Cain" class="playerpic" id="ppic3">
+            <div class="box"> <img src="pence.jpg" alt="Cain" class="playerpic" id="ppic3">
                 <div id="ttext3" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name3"></p>
@@ -149,7 +159,7 @@
                     <p id="g2home3"></p>
                 </div>
             </div>
-            <div class="box"> <img src="posey.png" alt="Hosmer" class="playerpic" id="ppic4">
+            <div class="box"> <img src="posey.jpg" alt="Hosmer" class="playerpic" id="ppic4">
                 <div id="ttext4" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name4"></p>
@@ -159,7 +169,7 @@
                     <p id="g2home4"></p>
                 </div>
             </div>
-            <div class="box"> <img src="crawford.png" alt="Perez" class="playerpic" id="ppic5">
+            <div class="box"> <img src="crawford.jpg" alt="Perez" class="playerpic" id="ppic5">
                 <div id="ttext5" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name5"></p>
@@ -169,7 +179,7 @@
                     <p id="g2home5"></p>
                 </div>
             </div>
-            <div class="box"> <img src="nunez.png" alt="Mondesi" class="playerpic" id="ppic6">
+            <div class="box"> <img src="nunez.jpg" alt="Mondesi" class="playerpic" id="ppic6">
                 <div id="ttext6" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name6"></p>
@@ -179,7 +189,7 @@
                     <p id="g2home6"></p>
                 </div>
             </div>
-            <div class="box"> <img src="panik.png" alt="Orlando" class="playerpic" id="ppic7">
+            <div class="box"> <img src="panik.jpg" alt="Orlando" class="playerpic" id="ppic7">
                 <div id="ttext7" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name7"></p>
@@ -189,7 +199,7 @@
                     <p id="g2home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="bumgarner.png" alt="Escobar" class="playerpic" id="ppic8">
+            <div class="box"> <img src="bumgarner.jpg" alt="Escobar" class="playerpic" id="ppic8">
                 <div id="ttext8" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="g2name8"></p>
