--- a/Royals_2015.html
+++ b/Royals_2015.html
@@ -13,8 +13,18 @@
 
 <body id="royals">
 
-    <header id="insert">
+    <header class="page-header">
+        <h1>Baseball Stats </h1>
 
+        <nav class="page-nav">
+            <ul>
+                <li><a href="index.html" title="Home" id="onenav">Home</a></li>
+                <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="Giants.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="Mets.html" title="Mets" id="fivenav">Mets</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -26,7 +36,7 @@
 
             <div class="box" id="r1">
 
-                <img src="escobar.png" alt="Escobar" class="playerpic" id="pic1">
+                <img src="escobar.jpg" alt="Escobar" class="playerpic" id="pic1">
                 <div id="text1" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name1"></p>
@@ -37,7 +47,7 @@
                 </div>
             </div>
 
-            <div class="box" id="r2"> <img src="zobrist.png" alt="Zobrist" class="playerpic" id="pic2">
+            <div class="box" id="r2"> <img src="zobrist.jpg" alt="Zobrist" class="playerpic" id="pic2">
                 <div id="text2" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name2"></p>
@@ -47,7 +57,7 @@
                     <p id="r3home2"></p>
                 </div>
             </div>
-            <div class="box" id="r3"> <img src="cain.png" alt="Cain" class="playerpic" id="pic3">
+            <div class="box" id="r3"> <img src="cain.jpg" alt="Cain" class="playerpic" id="pic3">
                 <div id="text3" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name3"></p>
@@ -57,7 +67,7 @@
                     <p id="r3home3"></p>
                 </div>
             </div>
-            <div class="box" id="r4"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="pic4">
+            <div class="box" id="r4"> <img src="hosmer.jpg" alt="Hosmer" class="playerpic" id="pic4">
                 <div id="text4" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name4"></p>
@@ -67,7 +77,7 @@
                     <p id="r3home4"></p>
                 </div>
             </div>
-            <div class="box" id="r5"> <img src="morales.png" alt="Morales" class="playerpic" id="pic5">
+            <div class="box" id="r5"> <img src="morales.jpg" alt="Morales" class="playerpic" id="pic5">
                 <div id="text5" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name5"></p>
@@ -77,7 +87,7 @@
                     <p id="r3home5"></p>
                 </div>
             </div>
-            <div class="box" id="r6"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="pic6">
+            <div class="box" id="r6"> <img src="moustakas.jpg" alt="Moustakas" class="playerpic" id="pic6">
                 <div id="text6" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name6"></p>
@@ -87,7 +97,7 @@
                     <p id="r3home6"></p>
                 </div>
             </div>
-            <div class="box" id="r7"> <img src="perez.png" alt="Perez" class="playerpic" id="pic7">
+            <div class="box" id="r7"> <img src="perez.jpg" alt="Perez" class="playerpic" id="pic7">
                 <div id="text7" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name7"></p>
@@ -97,7 +107,7 @@
                     <p id="r3home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="gordon.png" alt="Gordon" class="playerpic" id="pic8">
+            <div class="box"> <img src="gordon.jpg" alt="Gordon" class="playerpic" id="pic8">
                 <div id="text8" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r3name8"></p>
@@ -116,7 +126,7 @@
 
         <div id="flexbox2">
 
-            <div class="box"> <img src="gordon.png" alt="Gordon" class="playerpic" id="ppic1">
+            <div class="box"> <img src="gordon.jpg" alt="Gordon" class="playerpic" id="ppic1">
                 <div id="ttext1" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name1"></p>
@@ -126,7 +136,7 @@
                     <p id="r2home1"></p>
                 </div>
             </div>
-            <div class="box"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="ppic2">
+            <div class="box"> <img src="moustakas.jpg" alt="Moustakas" class="playerpic" id="ppic2">
                 <div id="ttext2" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name2"></p>
@@ -136,7 +146,7 @@
                     <p id="r2home2"></p>
                 </div>
             </div>
-            <div class="box"> <img src="cain.png" alt="Cain" class="playerpic" id="ppic3">
+            <div class="box"> <img src="cain.jpg" alt="Cain" class="playerpic" id="ppic3">
                 <div id="ttext3" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name3"></p>
@@ -146,7 +156,7 @@
                     <p id="r2home3"></p>
                 </div>
             </div>
-            <div class="box"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="ppic4">
+            <div class="box"> <img src="hosmer.jpg" alt="Hosmer" class="playerpic" id="ppic4">
                 <div id="ttext4" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name4"></p>
@@ -156,7 +166,7 @@
                     <p id="r2home4"></p>
                 </div>
             </div>
-            <div class="box"> <img src="perez.png" alt="Perez" class="playerpic" id="ppic5">
+            <div class="box"> <img src="perez.jpg" alt="Perez" class="playerpic" id="ppic5">
                 <div id="ttext5" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name5"></p>
@@ -166,7 +176,7 @@
                     <p id="r2home5"></p>
                 </div>
             </div>
-            <div class="box"> <img src="mondesi.png" alt="Mondesi" class="playerpic" id="ppic6">
+            <div class="box"> <img src="mondesi.jpg" alt="Mondesi" class="playerpic" id="ppic6">
                 <div id="ttext6" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name6"></p>
@@ -176,7 +186,7 @@
                     <p id="r2home6"></p>
                 </div>
             </div>
-            <div class="box"> <img src="orlando.png" alt="Orlando" class="playerpic" id="ppic7">
+            <div class="box"> <img src="orlando.jpg" alt="Orlando" class="playerpic" id="ppic7">
                 <div id="ttext7" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name7"></p>
@@ -186,7 +196,7 @@
                     <p id="r2home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="escobar.png" alt="Escobar" class="playerpic" id="ppic8">
+            <div class="box"> <img src="escobar.jpg" alt="Escobar" class="playerpic" id="ppic8">
                 <div id="ttext8" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="r2name8"></p>
