--- a/Mets.html
+++ b/Mets.html
@@ -13,8 +13,18 @@
 
 <body id="mets">
 
-    <header id="insert">
+    <header class="page-header">
+        <h1>Baseball Stats </h1>
 
+        <nav class="page-nav">
+            <ul>
+                <li><a href="index.html" title="Home" id="onenav">Home</a></li>
+                <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="Giants.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="Mets.html" title="Mets" id="fivenav">Mets</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -26,7 +36,7 @@
 
             <div class="box" id="r1">
 
-                <img src="granderson.png" alt="Granderson" class="playerpic" id="pic1">
+                <img src="granderson.jpg" alt="Granderson" class="playerpic" id="pic1">
                 <div id="text1" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name1"></p>
@@ -37,7 +47,7 @@
                 </div>
             </div>
 
-            <div class="box" id="r2"> <img src="wright.png" alt="Wright" class="playerpic" id="pic2">
+            <div class="box" id="r2"> <img src="wright.jpg" alt="Wright" class="playerpic" id="pic2">
                 <div id="text2" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name2"></p>
@@ -47,7 +57,7 @@
                     <p id="m1home2"></p>
                 </div>
             </div>
-            <div class="box" id="r3"> <img src="murphy.png" alt="Murphy" class="playerpic" id="pic3">
+            <div class="box" id="r3"> <img src="murphy.jpg" alt="Murphy" class="playerpic" id="pic3">
                 <div id="text3" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name3"></p>
@@ -57,7 +67,7 @@
                     <p id="m1home3"></p>
                 </div>
             </div>
-            <div class="box" id="r4"> <img src="Yoenis.png" alt="Yoenis" class="playerpic" id="pic4">
+            <div class="box" id="r4"> <img src="Yoenis.jpg" alt="Yoenis" class="playerpic" id="pic4">
                 <div id="text4" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name4"></p>
@@ -67,7 +77,7 @@
                     <p id="m1home4"></p>
                 </div>
             </div>
-            <div class="box" id="r5"> <img src="duda.png" alt="Duda" class="playerpic" id="pic5">
+            <div class="box" id="r5"> <img src="duda.jpg" alt="Duda" class="playerpic" id="pic5">
                 <div id="text5" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name5"></p>
@@ -77,7 +87,7 @@
                     <p id="m1home5"></p>
                 </div>
             </div>
-            <div class="box" id="r6"> <img src="flores.png" alt="Flores" class="playerpic" id="pic6">
+            <div class="box" id="r6"> <img src="flores.jpg" alt="Flores" class="playerpic" id="pic6">
                 <div id="text6" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name6"></p>
@@ -87,7 +97,7 @@
                     <p id="m1home6"></p>
                 </div>
             </div>
-            <div class="box" id="r7"> <img src="johnson.png" alt="Johnson" class="playerpic" id="pic7">
+            <div class="box" id="r7"> <img src="johnson.jpg" alt="Johnson" class="playerpic" id="pic7">
                 <div id="text7" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name7"></p>
@@ -97,7 +107,7 @@
                     <p id="m1home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="harvey.png" alt="Harvey" class="playerpic" id="pic8">
+            <div class="box"> <img src="harvey.jpg" alt="Harvey" class="playerpic" id="pic8">
                 <div id="text8" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="m1name8"></p>
@@ -119,7 +129,7 @@
 
         <div id="flexbox2">
 
-            <div class="box"> <img src="harvey.png" alt="Harvey" class="playerpic" id="ppic1">
+            <div class="box"> <img src="harvey.jpg" alt="Harvey" class="playerpic" id="ppic1">
                 <div id="ttext1" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name1"></p>
@@ -129,7 +139,7 @@
                     <p id="m2home1"></p>
                 </div>
             </div>
-            <div class="box"> <img src="Yoenis.png" alt="Yoenis" class="playerpic" id="ppic2">
+            <div class="box"> <img src="Yoenis.jpg" alt="Yoenis" class="playerpic" id="ppic2">
                 <div id="ttext2" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name2"></p>
@@ -139,7 +149,7 @@
                     <p id="m2home2"></p>
                 </div>
             </div>
-            <div class="box"> <img src="duda.png" alt="Duda" class="playerpic" id="ppic3">
+            <div class="box"> <img src="duda.jpg" alt="Duda" class="playerpic" id="ppic3">
                 <div id="ttext3" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name3"></p>
@@ -149,7 +159,7 @@
                     <p id="m2home3"></p>
                 </div>
             </div>
-            <div class="box"> <img src="rivera.png" alt="Rivera" class="playerpic" id="ppic4">
+            <div class="box"> <img src="rivera.jpg" alt="Rivera" class="playerpic" id="ppic4">
                 <div id="ttext4" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name4"></p>
@@ -159,7 +169,7 @@
                     <p id="m2home4"></p>
                 </div>
             </div>
-            <div class="box"> <img src="flores.png" alt="Flores" class="playerpic" id="ppic5">
+            <div class="box"> <img src="flores.jpg" alt="Flores" class="playerpic" id="ppic5">
                 <div id="ttext5" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name5"></p>
@@ -169,7 +179,7 @@
                     <p id="m2home5"></p>
                 </div>
             </div>
-            <div class="box"> <img src="kelly.png" alt="Kelly" class="playerpic" id="ppic6">
+            <div class="box"> <img src="kelly.jpg" alt="Kelly" class="playerpic" id="ppic6">
                 <div id="ttext6" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name6"></p>
@@ -179,7 +189,7 @@
                     <p id="m2home6"></p>
                 </div>
             </div>
-            <div class="box"> <img src="bruce.png" alt="Bruce" class="playerpic" id="ppic7">
+            <div class="box"> <img src="bruce.jpg" alt="Bruce" class="playerpic" id="ppic7">
                 <div id="ttext7" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name7"></p>
@@ -189,7 +199,7 @@
                     <p id="m2home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="degrom.png" alt="deGrom" class="playerpic" id="ppic8">
+            <div class="box"> <img src="degrom.jpg" alt="deGrom" class="playerpic" id="ppic8">
                 <div id="ttext8" class="hide">
                     <p>2016 Season Stats</p>
                     <p id="m2name8"></p>
