--- a/Royals_2014.html
+++ b/Royals_2014.html
@@ -13,10 +13,19 @@
 
 <body id="royals">
 
-    <header id="insert">
+    <header class="page-header">
+        <h1>Baseball Stats </h1>
 
+        <nav class="page-nav">
+            <ul>
+                <li><a href="index.html" title="Home" id="onenav">Home</a></li>
+                <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="Giants.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="Mets.html" title="Mets" id="fivenav">Mets</a></li>
+            </ul>
+        </nav>
     </header>
-
     <main>
 
         <div class="big">
@@ -26,7 +35,7 @@
 
             <div class="box" id="r1">
 
-                <img src="perez.png" alt="Perez" class="playerpic" id="pic1">
+                <img src="perez.jpg" alt="Perez" class="playerpic" id="pic1">
                 <div id="text1" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name1"></p>
@@ -37,7 +46,7 @@
                 </div>
             </div>
 
-            <div class="box" id="r2"> <img src="gordon.png" alt="Gordon" class="playerpic" id="pic2">
+            <div class="box" id="r2"> <img src="gordon.jpg" alt="Gordon" class="playerpic" id="pic2">
                 <div id="text2" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name2"></p>
@@ -47,7 +56,7 @@
                     <p id="r1home2"></p>
                 </div>
             </div>
-            <div class="box" id="r3"> <img src="escobar.png" alt="Escobar" class="playerpic" id="pic3">
+            <div class="box" id="r3"> <img src="escobar.jpg" alt="Escobar" class="playerpic" id="pic3">
                 <div id="text3" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name3"></p>
@@ -57,7 +66,7 @@
                     <p id="r1home3"></p>
                 </div>
             </div>
-            <div class="box" id="r4"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="pic4">
+            <div class="box" id="r4"> <img src="hosmer.jpg" alt="Hosmer" class="playerpic" id="pic4">
                 <div id="text4" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name4"></p>
@@ -67,7 +76,7 @@
                     <p id="r1home4"></p>
                 </div>
             </div>
-            <div class="box" id="r5"> <img src="cain.png" alt="Cain" class="playerpic" id="pic5">
+            <div class="box" id="r5"> <img src="cain.jpg" alt="Cain" class="playerpic" id="pic5">
                 <div id="text5" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name5"></p>
@@ -77,7 +86,7 @@
                     <p id="r1home5"></p>
                 </div>
             </div>
-            <div class="box" id="r6"> <img src="butler.png" alt="Butler" class="playerpic" id="pic6">
+            <div class="box" id="r6"> <img src="butler.jpg" alt="Butler" class="playerpic" id="pic6">
                 <div id="text6" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name6"></p>
@@ -87,7 +96,7 @@
                     <p id="r1home6"></p>
                 </div>
             </div>
-            <div class="box" id="r7"> <img src="infante.png" alt="Infante" class="playerpic" id="pic7">
+            <div class="box" id="r7"> <img src="infante.jpg" alt="Infante" class="playerpic" id="pic7">
                 <div id="text7" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name7"></p>
@@ -97,7 +106,7 @@
                     <p id="r1home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="pic8">
+            <div class="box"> <img src="moustakas.jpg" alt="Moustakas" class="playerpic" id="pic8">
                 <div id="text8" class="hide">
                     <p>2014 Season Stats</p>
                     <p id="r1name8"></p>
@@ -119,7 +128,7 @@
 
         <div id="flexbox2">
 
-            <div class="box"> <img src="gordon.png" alt="Gordon" class="playerpic" id="ppic1">
+            <div class="box"> <img src="gordon.jpg" alt="Gordon" class="playerpic" id="ppic1">
                 <div id="ttext1" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name1"></p>
@@ -129,7 +138,7 @@
                     <p id="r2home1"></p>
                 </div>
             </div>
-            <div class="box"> <img src="moustakas.png" alt="Moustakas" class="playerpic" id="ppic2">
+            <div class="box"> <img src="moustakas.jpg" alt="Moustakas" class="playerpic" id="ppic2">
                 <div id="ttext2" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name2"></p>
@@ -139,7 +148,7 @@
                     <p id="r2home2"></p>
                 </div>
             </div>
-            <div class="box"> <img src="cain.png" alt="Cain" class="playerpic" id="ppic3">
+            <div class="box"> <img src="cain.jpg" alt="Cain" class="playerpic" id="ppic3">
                 <div id="ttext3" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name3"></p>
@@ -149,7 +158,7 @@
                     <p id="r2home3"></p>
                 </div>
             </div>
-            <div class="box"> <img src="hosmer.png" alt="Hosmer" class="playerpic" id="ppic4">
+            <div class="box"> <img src="hosmer.jpg" alt="Hosmer" class="playerpic" id="ppic4">
                 <div id="ttext4" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name4"></p>
@@ -159,7 +168,7 @@
                     <p id="r2home4"></p>
                 </div>
             </div>
-            <div class="box"> <img src="perez.png" alt="Perez" class="playerpic" id="ppic5">
+            <div class="box"> <img src="perez.jpg" alt="Perez" class="playerpic" id="ppic5">
                 <div id="ttext5" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name5"></p>
@@ -169,7 +178,7 @@
                     <p id="r2home5"></p>
                 </div>
             </div>
-            <div class="box"> <img src="mondesi.png" alt="Mondesi" class="playerpic" id="ppic6">
+            <div class="box"> <img src="mondesi.jpg" alt="Mondesi" class="playerpic" id="ppic6">
                 <div id="ttext6" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name6"></p>
@@ -179,7 +188,7 @@
                     <p id="r2home6"></p>
                 </div>
             </div>
-            <div class="box"> <img src="orlando.png" alt="Orlando" class="playerpic" id="ppic7">
+            <div class="box"> <img src="orlando.jpg" alt="Orlando" class="playerpic" id="ppic7">
                 <div id="ttext7" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name7"></p>
@@ -189,7 +198,7 @@
                     <p id="r2home7"></p>
                 </div>
             </div>
-            <div class="box"> <img src="escobar.png" alt="Escobar" class="playerpic" id="ppic8">
+            <div class="box"> <img src="escobar.jpg" alt="Escobar" class="playerpic" id="ppic8">
                 <div id="ttext8" class="hide">
                     <p>2015 Season Stats</p>
                     <p id="r2name8"></p>
