--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Search Bar</title>
+    <title>Baseball</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
@@ -58,7 +58,7 @@
 
     </main>
 
-    <footer id="inserth">
+    <footer>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
