--- a/Royals_2014.html
+++ b/Royals_2014.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Search Bar</title>
+    <title>Royals 2014</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
@@ -130,7 +130,7 @@
 
             <div class="box"> <img src="gordon.jpg" alt="Gordon" class="playerpic" id="ppic1">
                 <div id="ttext1" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name1"></p>
                     <p id="r2num1"></p>
                     <p id="r2pos1"></p>
@@ -140,7 +140,7 @@
             </div>
             <div class="box"> <img src="moustakas.jpg" alt="Moustakas" class="playerpic" id="ppic2">
                 <div id="ttext2" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name2"></p>
                     <p id="r2num2"></p>
                     <p id="r2pos2"></p>
@@ -150,7 +150,7 @@
             </div>
             <div class="box"> <img src="cain.jpg" alt="Cain" class="playerpic" id="ppic3">
                 <div id="ttext3" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name3"></p>
                     <p id="r2num3"></p>
                     <p id="r2pos3"></p>
@@ -160,7 +160,7 @@
             </div>
             <div class="box"> <img src="hosmer.jpg" alt="Hosmer" class="playerpic" id="ppic4">
                 <div id="ttext4" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name4"></p>
                     <p id="r2num4"></p>
                     <p id="r2pos4"></p>
@@ -170,7 +170,7 @@
             </div>
             <div class="box"> <img src="perez.jpg" alt="Perez" class="playerpic" id="ppic5">
                 <div id="ttext5" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name5"></p>
                     <p id="r2num5"></p>
                     <p id="r2pos5"></p>
@@ -180,7 +180,7 @@
             </div>
             <div class="box"> <img src="mondesi.jpg" alt="Mondesi" class="playerpic" id="ppic6">
                 <div id="ttext6" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name6"></p>
                     <p id="r2num6"></p>
                     <p id="r2pos6"></p>
@@ -190,7 +190,7 @@
             </div>
             <div class="box"> <img src="orlando.jpg" alt="Orlando" class="playerpic" id="ppic7">
                 <div id="ttext7" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name7"></p>
                     <p id="r2num7"></p>
                     <p id="r2pos7"></p>
@@ -200,7 +200,7 @@
             </div>
             <div class="box"> <img src="escobar.jpg" alt="Escobar" class="playerpic" id="ppic8">
                 <div id="ttext8" class="hide">
-                    <p>2015 Season Stats</p>
+                    <p>2016 Season Stats</p>
                     <p id="r2name8"></p>
                     <p id="r2num8"></p>
                     <p id="r2pos8"></p>
@@ -214,7 +214,8 @@
 
     </main>
 
-    <footer id="inserth">
+    <footer>
+        <a href="homework/homeworkindex.html"> Homework </a>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
