--- a/Royals_2015.html
+++ b/Royals_2015.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Search Bar</title>
+    <title>Royals 2015</title>
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
@@ -211,7 +211,8 @@
 
     </main>
 
-    <footer id="inserth">
+    <footer>
+        <a href="homework/homeworkindex.html"> Homework </a>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
