--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </header>
 
     <main>
+
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/k-bEoii8MGw" frameborder="0" allowfullscreen></iframe>
         <div class="big">
             <h2>Baseball Term Glossary</h2>
         </div>
