--- a/homework/homeworkindex.html
+++ b/homework/homeworkindex.html
@@ -7,16 +7,23 @@
     <meta name="viewport" content="width = device-width">
     <script type="text/javascript">
     </script>
+    <link rel="stylesheet" type="text/css" href="baseball.css">
 </head>
 
 
-<body>
+<body id="royals">
 
-    <header>
-        <h1> Maggie's Website! </h1>
-        <nav>
-            <li> home </li>
-            <li> page two </li>
+    <header class="page-header">
+        <h1>Homework </h1>
+
+        <nav class="page-nav">
+            <ul>
+                <li><a href="//maggieliseklinke.github.io/index.html" title="Home" id="onenav">Home</a></li>
+                <li><a href="//maggieliseklinke.github.io/Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="//maggieliseklinke.github.io/Giants.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="//maggieliseklinke.github.io/Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="//maggieliseklinke.github.io/Mets.html" title="Mets" id="fivenav">Mets</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -47,7 +54,8 @@
     </main>
 
     <footer>
-        <p>Last Updated 1.21.17</p>
+        <p>Last Updated 4.05.17 &nbsp;
+            <a href="//maggieliseklinke.github.io/planning.html">Planning Doc</a></p>
     </footer>
 
 </body>
