--- a/planning.html
+++ b/planning.html
@@ -30,7 +30,7 @@
     <main>
 
 
-        <iframe src="https://www.youtube.com/embed/k-bEoii8MGw" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/k-bEoii8MGw" frameborder="0" allowfullscreen></iframe>
         <div class="big">
             <h2>Baseball Term Glossary</h2>
         </div>
