--- a/homework/homeworkindex.html
+++ b/homework/homeworkindex.html
@@ -54,8 +54,9 @@
     </main>
 
     <footer>
-        <p>Last Updated 4.05.17 &nbsp;
-            <a href="//maggieliseklinke.github.io/planning.html">Planning Doc</a></p>
+        <a href="homeworkindex.html"> Homework </a> &nbsp;
+        <a href="//maggieklinke.github.io/planning.html">Planning Doc</a>
+        <br> &copy; Maggie Klinke 2017
     </footer>
 
 </body>
