--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     </main>
 
     <footer>
+        <a href="homework/homeworkindex.html"> Homework </a> &nbsp;
+        <a href="planning.html">Planning Doc</a>
+        <br> &copy; Maggie Klinke 2017
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
