--- a/planning.html
+++ b/planning.html
@@ -19,10 +19,10 @@
         <nav class="page-nav">
             <ul>
                 <li><a href="index.html" title="Home" id="onenav">Home</a></li>
-                <li><a href="Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
-                <li><a href="Giants.html" title="Giants" id="threenav">Giants</a></li>
-                <li><a href="Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
-                <li><a href="Mets.html" title="Mets" id="fivenav">Mets</a></li>
+                <li><a href="royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="giants.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="mets.html" title="Mets" id="fivenav">Mets</a></li>
             </ul>
         </nav>
     </header>
@@ -62,6 +62,9 @@
     </main>
 
     <footer>
+        <a href="homework/homeworkindex.html"> Homework </a> &nbsp;
+        <a href="planning.html">Planning Doc</a>
+        <br> &copy; Maggie Klinke 2017
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
