--- a/index.html
+++ b/index.html
@@ -38,20 +38,38 @@
         <div id="flexbox3">
 
             <div class="box">
+                <div class="center"> RBI:
+                    <br> Runners Batted In</div>
+
             </div>
             <div class="box">
+                <div class="center">GP:
+                    <br> Games Played</div>
             </div>
             <div class="box">
+                <div class="center">AB:
+                    <br> Times at Bat</div>
+
             </div>
             <div class="box">
+                <div class="center">R:
+                    <br> Runs</div>
             </div>
             <div class="box">
+                <div class="center"> H:
+                    <br> Hits</div>
             </div>
             <div class="box">
+                <div class="center">HR:
+                    <br> Home Runs</div>
             </div>
             <div class="box">
+                <div class="center">AVG:
+                    <br> Batting Average</div>
             </div>
             <div class="box">
+                <div class="center"> PK:
+                    <br> Pickoff</div>
             </div>
 
 
