--- a/planning.html
+++ b/planning.html
@@ -11,10 +11,10 @@
 </head>
 
 
-<body id="index">
+<body id="plan">
 
     <header class="page-header">
-        <h1>Baseball Stats </h1>
+        <h1>Planning Document </h1>
 
         <nav class="page-nav">
             <ul>
@@ -29,33 +29,34 @@
 
     <main>
 
+        <h2>Site Purpose</h2>
+        <p> This site is to show people the teams behind the 2014 and 2015 World Series.They will be able to see all of the stats for these players that were in the opening lineup for game 1, and they will see the stats for the opening line up for game 1 of the 2017 year, but those stats will be from 2016</p>
+        <br>
+        <h2>Target Audience</h2>
+        <p>The target audience is literally all of America, it is America's favorite pass time. But I know we need to be more specific, so the target audience is adults aged 20-30 who are obsessed with baseball players, especially those that have played in the world series. In that age bracket, income doesn't matter, everyone can love baseball and keeping up with stats and even going to games is really inexpensive. The audience is going to be searching for information quickly. Instead of having to search the internet for the Royals 2015 World Series player stats, they can just come to this website and grab all of the important stats at once. The majority of the audience is going to live in either: Kansas City, New York, or San Francisco. These places are where each of the teams are located. It will mostly be used whenever the user is wondering what the players stats were. Or if they quickly want to find a picture of a player. </p>
+        <br>
+        <h2>Persona</h2>
+        <h3>Persona: &nbsp; Baseball Fan </h3>
+        <br>
+        <br>
+        <h3>Photo:</h3> <img src="sportsfan.jpg" alt="sports fan" id="fan">
+        <br>
+        <h3> Name: &nbsp; Michelle McKnight </h3>
+        <br>
+        <h3>Job Title: &nbsp; Social Media Marketer </h3>
+        <br>
+        <h3> Demographics: &nbsp; </h3>
+        <ul>
+            <li> Early 20's</li>
+            <li> No Children</li>
+            <li> Attends lots of baseball game</li>
+        </ul>
+        <h2> JSON</h2>
+        <p> Practically every page but the home/index page uses JSON. The Royals-2014, Royals-2015, Mets, and Giants all use JSON to populate the stats when you click on the image.</p>
+        <br>
+        <h2>Video</h2>
+        <p>The video is located on the home/index page.</p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/k-bEoii8MGw" frameborder="0" allowfullscreen></iframe>
-        <div class="big">
-            <h2>Baseball Term Glossary</h2>
-        </div>
-
-        <div id="flexbox3">
-
-            <div class="box">
-            </div>
-            <div class="box">
-            </div>
-            <div class="box">
-            </div>
-            <div class="box">
-            </div>
-            <div class="box">
-            </div>
-            <div class="box">
-            </div>
-            <div class="box">
-            </div>
-            <div class="box">
-            </div>
-
-
-        </div>
 
 
 
