--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="index">
 
     <header class="page-header">
-        <h1>Baseball Stats </h1>
+        <h1>Baseball Statss </h1>
 
         <nav class="page-nav">
             <ul>
