--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <nav class="page-nav">
             <ul>
                 <li><a href="index.html" title="Home" id="onenav">Home</a></li>
-                <li><a href="royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
-                <li><a href="giants_correct.html" title="Giants" id="threenav">Giants</a></li>
-                <li><a href="royals_2014.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
-                <li><a href="mets_correct.html" title="Mets" id="fivenav">Mets</a></li>
+                <li><a href="royals_2014_correct.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="giants.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="royals_correct_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="mets.html" title="Mets" id="fivenav">Mets</a></li>
             </ul>
         </nav>
     </header>
