--- a/homework/homeworkindex.html
+++ b/homework/homeworkindex.html
@@ -14,15 +14,15 @@
 <body id="royals">
 
     <header class="page-header">
-        <h1>Homework </h1>
+        <h1>Baseball Stats </h1>
 
         <nav class="page-nav">
             <ul>
                 <li><a href="//maggieliseklinke.github.io/index.html" title="Home" id="onenav">Home</a></li>
-                <li><a href="//maggieliseklinke.github.io/Royals_2014.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
-                <li><a href="//maggieliseklinke.github.io/Giants.html" title="Giants" id="threenav">Giants</a></li>
-                <li><a href="//maggieliseklinke.github.io/Royals_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
-                <li><a href="//maggieliseklinke.github.io/Mets.html" title="Mets" id="fivenav">Mets</a></li>
+                <li><a href="//maggieliseklinke.github.io/royals_2014_correct.html" title="Royals-2014" id="twonav">Royals-2014</a></li>
+                <li><a href="//maggieliseklinke.github.io/giants_correct.html" title="Giants" id="threenav">Giants</a></li>
+                <li><a href="//maggieliseklinke.github.io/royals_correct_2015.html" title="Royals-2015" id="fournav">Royals-2015</a></li>
+                <li><a href="//maggieliseklinke.github.io/mets_correct.html" title="Mets" id="fivenav">Mets</a></li>
             </ul>
         </nav>
     </header>
