--- a/homework/homeworkindex.html
+++ b/homework/homeworkindex.html
@@ -14,7 +14,7 @@
 <body id="royals">
 
     <header class="page-header">
-        <h1>Baseball Stats </h1>
+        <h1>Homework</h1>
 
         <nav class="page-nav">
             <ul>
