final wireframes and link fixes

--- a/homework/homeworkindex.html
+++ b/homework/homeworkindex.html
@@ -55,7 +55,7 @@
 
     <footer>
         <a href="homeworkindex.html"> Homework </a> &nbsp;
-        <a href="//maggieklinke.github.io/planning.html">Planning Doc</a>
+        <a href="//maggieliseklinke.github.io/planning.html">Planning Doc</a>
         <br> &copy; Maggie Klinke 2017
     </footer>
 
