--- a/planning.html
+++ b/planning.html
@@ -56,6 +56,10 @@
         <br>
         <h2>Video</h2>
         <p>The video is located on the home/index page.</p>
+        <h2> Wireframes</h2>
+        <img src="browser.png" alt="browser">
+        <img src="ipad.png" alt="ipad">
+        <img src="iphone.png" alt="iphone">
 
 
 
